WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125137
Web Inspector: webViewResized() is not used anywhere in WebInspectorUI
https://bugs.webkit.org/show_bug.cgi?id=125137
Summary
Web Inspector: webViewResized() is not used anywhere in WebInspectorUI
Seokju Kwon
Reported
2013-12-02 23:32:32 PST
Remove leftover code.
Attachments
Patch
(4.61 KB, patch)
2013-12-02 23:35 PST
,
Seokju Kwon
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Seokju Kwon
Comment 1
2013-12-02 23:35:17 PST
Created
attachment 218271
[details]
Patch
WebKit Commit Bot
Comment 2
2013-12-03 10:05:46 PST
Comment on
attachment 218271
[details]
Patch Clearing flags on attachment: 218271 Committed
r160012
: <
http://trac.webkit.org/changeset/160012
>
WebKit Commit Bot
Comment 3
2013-12-03 10:05:48 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug