Web Inspector: webViewResized() is not used anywhere in WebInspectorUI https://bugs.webkit.org/show_bug.cgi?id=125137

Reviewed by Darin Adler.

Remove leftover code.

No new tests, no behavior changes.

* inspector/InspectorController.cpp:
* inspector/InspectorController.h:
* inspector/InspectorOverlay.cpp:
* inspector/InspectorOverlay.h:
* inspector/InspectorPageAgent.cpp:
* inspector/InspectorPageAgent.h:


Canonical link: https://commits.webkit.org/143252@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160012 268f45cc-cd09-0410-ab3c-d52691b4dbfc